--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.2.7
 djangorestframework==3.14.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.18
 python-decouple==3.8
 requests==2.31.0
 matplotlib==3.7.2
