--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ djangorestframework==3.14.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
 requests==2.31.0
-matplotlib==3.7.2
-seaborn==0.12.2
+matplotlib==3.8.4
+seaborn==0.13.2
+numpy==1.26.4
 Pillow>=10.4.0
 django-cors-headers==4.3.1
 gunicorn==21.2.0
